small fix on price position on mobile display

--- a/app/assets/stylesheets/hrservices/_index.scss
+++ b/app/assets/stylesheets/hrservices/_index.scss
@@ -74,7 +74,7 @@
 .price {
   position: relative;
   top: 1.5vh;
-  right: 2vh;
+  right: 3vh;
   font-size: 16px;
 }
 
